--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,16 +1,6 @@
 {
+  "trailingComma": "es5",
   "tabWidth": 2,
-  "useTabs": false,
   "semi": true,
-  "singleQuote": true,
-  "jsxSingleQuote": false,
-  "trailingComma": "all",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": true,
-  "arrowParens": "avoid",
-  "requirePragma": false,
-  "insertPragma": false,
-  "proseWrap": "preserve",
-  "htmlWhitespaceSensitivity": "css",
-  "endOfLine": "auto"
+  "singleQuote": true
 }
